Melhorias e registro de tempo

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 JIRA_ACCOUNT_EMAIL="mail@mail.com"
 JIRA_API_TOKEN=""
 JIRA_URL="https://your-domain.atlassian.net"
+TEMPO_API_KEY=""
+TEMPO_API_URL="https://api.tempo.io/4/worklogs"
