--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ dependencies = [
     "jira>=3.10.5",
     "langchain>=0.3.27",
     "python-dotenv>=1.1.1",
-    "mcp[cli]>=1.2.0"
+    "mcp[cli]>=1.2.0",
+    "tempo-api-python-client>=0.12.0"
 ]
 
 [build-system]
