--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ dependencies = [
     "langchain>=0.3.27",
     "python-dotenv>=1.1.1",
     "mcp[cli]>=1.2.0",
-    "tempo-api-python-client>=0.12.0"
+    "tempo-api-python-client>=0.12.0",
+    "pyyaml>=6.0.2",
 ]
 
 [build-system]
